Using file glob to recursively include source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt : CMake project for NLang, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.12)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
@@ -12,7 +12,9 @@ endif()
 project ("NLang")
 
 # Add source to this project's executable.
-add_executable (NLang "NLang.cpp")
+file(GLOB NLang_src CONFIGURE_DEPENDS "*.cpp")
+
+add_executable (NLang ${NLang_src})
 
 target_precompile_headers(NLang PUBLIC "pch.hpp")
 
